--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
     </section>
 
     <section>
+        <h2>Чем мы занимаемся</h2>
+
+        <ul>
+            <li>
+                <img src="./img/dekstop.svg" alt="">
+                <p>Десктопные приложения</p>
+            </li>
+            <li>
+                <img src="./img/mobile.svg" alt="">
+                <p>Мобильные приложения</p>
+            </li>
+            <li>
+                <img src="./img/designer.svg" alt="">
+                <p>Дизайнерские решения</p>
+            </li>
+        </ul>
+    </section>
+
+    <section>
         <h2>Наша команда</h2>
 
         <ul>
